Add filters for item table, cleanup code, remove ts build output from git tracking
